--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,3 +1,12 @@
+.widget1x1 {
+  background-color: bisque;
+}
 
+.bento {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-auto-rows: 192px;
+  max-width: 1200px;
+}
 
 /*# sourceMappingURL=home.css.map */
