--- a/src/assets/sass/components/_widget.scss
+++ b/src/assets/sass/components/_widget.scss
@@ -1,3 +1,52 @@
-.widget1x1{
-  background-color: bisque;
+.widget {
+  position: relative;
+  z-index: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: solid #180000aa 2px;
+  background-color: #171717aa;
+  padding: 1rem;
+  border-radius: 0.75rem;
+  overflow: hidden;
+
+  transition: 0.2s all;
+
+  &.interactive:hover {
+    scale: 1.03;
+    cursor: pointer;
+  }
+
+  &::before {
+    content: "";
+    background-color: transparent;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
+    background-repeat: repeat;
+    background-size: 182px;
+    opacity: 0.12;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  &.x1_y2 {
+    grid-column-end: span 2;
+  }
+
+  &.x1_y2 {
+    grid-column-end: span 2;
+  }
+
+  &.x2_y1 {
+    grid-row-end: span 2;
+  }
+
+  &.x2_y2 {
+    grid-column-end: span 2;
+    grid-row-end: span 2;
+  }
 }
