--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,14 +1,12 @@
-@import './base/typography';
+@import "./base/typography";
 
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   color: #fbd4d4;
 }
 
-body{
-
-  background: rgb(224, 226, 231);
-  background: rgb(15 23 42);
+body {
+  background: rgb(15, 23, 42);
 }
