--- a/src/assets/sass/components/_widget.scss
+++ b/src/assets/sass/components/_widget.scss
@@ -6,17 +6,23 @@
   align-items: center;
   justify-content: center;
 
-  border: solid #180000aa 2px;
+  border: solid #0a0a0a 1px;
   background-color: #171717aa;
   padding: 1rem;
   border-radius: 0.75rem;
   overflow: hidden;
+  box-shadow: 0rem 0.15rem 0.6rem #0e0e0e5f;
 
   transition: 0.2s all;
 
   &.interactive:hover {
     scale: 1.03;
     cursor: pointer;
+    box-shadow: none;
+    opacity: 1;
+    // * {
+    //   opacity: 1;
+    // }
   }
 
   &::before {
@@ -31,10 +37,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-  }
-
-  &.x1_y2 {
-    grid-column-end: span 2;
   }
 
   &.x1_y2 {
