--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,14 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
 * {
   margin: 0;
   padding: 0;
-  font-family: "Noto Sans JP", sans-serif;
-  color: #fbd4d4;
-}
+  font-family: 'DM Sans', sans-serif;  color: #fbd4d4; }
 
 body {
-  background: rgb(224, 226, 231);
-  background: rgb(15, 23, 42);
-}
+  background: #0f172a; }
 
 /*# sourceMappingURL=app.css.map */
